<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   
    
     >

    <ToggleButton
        android:id="@+id/button1"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="70dp"
        android:textOn="@string/qs"
           android:textOff="@string/qs"
        
         />

    <ToggleButton
        android:id="@+id/button2"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignBottom="@+id/button1"
        android:layout_marginLeft="27dp"
        android:layout_toRightOf="@+id/button1"
        android:textOn="@string/qs" 
        android:textOff="@string/qs"/>

    <ToggleButton
        android:id="@+id/button4"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignLeft="@+id/button1"
        android:layout_below="@+id/button1"
        android:layout_marginTop="55dp"
        android:textOn="@string/qs" 
        android:textOff="@string/qs" />

    <ToggleButton
        android:id="@+id/button5"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignBottom="@+id/button4"
        android:layout_alignLeft="@+id/button2"
        android:textOn="@string/qs"
          android:textOff="@string/qs" />

    <ToggleButton
        android:id="@+id/button7"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_alignLeft="@+id/button5"
        android:layout_below="@+id/button5"
        android:layout_marginTop="60dp"
        android:textOn="@string/smt"
          android:textOff="@string/smt" />

    <ToggleButton
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/button2"
        android:layout_toRightOf="@+id/button7"
        android:textOn="@string/qs" 
         android:textOff="@string/qs"/>

    <ToggleButton
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/button5"
        android:layout_toRightOf="@+id/button7"
        android:textOn="@string/qs"
        android:textOff="@string/qs" />

    <ToggleButton
        android:id="@+id/button9"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/button7"
        android:layout_marginTop="15dp"
        android:textOn="@string/cnt" 
        android:textOff="@string/cnt" />

    <ToggleButton
        android:id="@+id/button8"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_alignBaseline="@+id/button9"
        android:layout_alignBottom="@+id/button9"
        android:layout_alignLeft="@+id/button4"
        android:textOn="@string/et" 
          android:textOff="@string/et"/>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_above="@+id/button2"
        android:text="@string/fii"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView1"
        android:layout_alignBottom="@+id/textView1"
        android:layout_alignParentRight="true"
        android:text="@string/score"
        android:textStyle="bold"
        android:textColor="#ff0000"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>